# coffee

./: .gitignore  BUILD_SUCCESS.md  CMakeLists.txt  CONTRIBUTING.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.txt  LICENSE  PRODUCTION_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STATUS.md  build_output.txt  evaluate_models.py  run_standalone.sh  run_tests.sh  setup.sh  train_all_models.py
.github/workflows/: build.yml
docs/: BUILD.md  DAW_TESTING.md  ML_ARCHITECTURE.md  TESTING.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/audio/: AudioCapture.cpp  AudioCapture.h  FeatureExtraction.cpp  FeatureExtraction.h  PitchDetector.cpp  PitchDetector.h  RhythmAnalyzer.cpp  RhythmAnalyzer.h
src/midi/: MIDIGenerator.cpp  MIDIGenerator.h  MIDITrack.cpp  MIDITrack.h  Quantizer.cpp  Quantizer.h
src/ml/: GenreClassifier.cpp  GenreClassifier.h  ModelInference.cpp  ModelInference.h  ONNXWrapper.cpp  ONNXWrapper.h  TensorConverter.cpp  TensorConverter.h  TimbreEncoder.cpp  TimbreEncoder.h
src/performance/: PerformanceProfiler.cpp  PerformanceProfiler.h
src/threading/: AudioMLBridge.cpp  AudioMLBridge.h
src/ui/: ControlPanel.cpp  ControlPanel.h  InstrumentSelector.cpp  InstrumentSelector.h  PianoRollComponent.cpp  PianoRollComponent.h  TrackLaneComponent.cpp  TrackLaneComponent.h
